Closed Bug 1865468 Opened 6 months ago Closed 6 months ago

Fix TrackPoint::IsDriverInstalled

Categories

(Core :: Widget: Win32, defect)

defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox120 --- wontfix
firefox121 --- wontfix
firefox122 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.
Keywords: regression
Regressed by: 672175

Let me know if this is unused for some reason and we can remove or what
not.

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8f8ac5dea5ac
Fix TrackPoint::IsDriverInstalled. r=masayuki
Status: NEW → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: