Bug 1865468 - Fix TrackPoint::IsDriverInstalled. r=masayuki

Let me know if this is unused for some reason and we can remove or what
not.

Differential Revision: https://phabricator.services.mozilla.com/D193983